--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && tsc -p tsconfig.server.json",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "yarn build && node build-server/server.js"
   },
   "eslintConfig": {
     "extends": [
